# nova

./: Cargo.toml  test.js
nova_vm/: Cargo.toml
nova_vm/src/: heap.rs  lib.rs
nova_vm/src/ecmascript/: builtins.rs  scripts_and_modules.rs
nova_vm/src/ecmascript/abstract_operations/: operations_on_objects.rs
nova_vm/src/ecmascript/builders/: builtin_function_builder.rs  ordinary_object_builder.rs  property_builder.rs
nova_vm/src/ecmascript/builtins/: array.rs  array_buffer.rs  bound_function.rs  builtin_function.rs  data_view.rs  date.rs  ecmascript_function.rs  embedder_object.rs  error.rs  finalization_registry.rs  global_object.rs  map.rs  module.rs  ordinary.rs  primitive_objects.rs  promise.rs  proxy.rs  regexp.rs  set.rs  shared_array_buffer.rs  structured_data.rs  typed_array.rs  weak_map.rs  weak_ref.rs  weak_set.rs
nova_vm/src/ecmascript/builtins/array_buffer/: abstract_operations.rs  data.rs
nova_vm/src/ecmascript/builtins/date/: data.rs
nova_vm/src/ecmascript/builtins/map/: data.rs
nova_vm/src/ecmascript/builtins/module/: data.rs
nova_vm/src/ecmascript/builtins/promise/: data.rs
nova_vm/src/ecmascript/execution/: agent.rs  environments.rs  execution_context.rs  realm.rs
nova_vm/src/ecmascript/scripts_and_modules/: module.rs  script.rs
nova_vm/src/ecmascript/syntax_directed_operations/: scope_analysis.rs
nova_vm/src/engine/: small_integer.rs
nova_vm/src/engine/bytecode/: executable.rs  instructions.rs  iterator.rs  vm.rs
nova_vm/src/heap/: element_array.rs  heap_bits.rs  heap_gc.rs  indexes.rs
small_string/: lib.rs
(+42 files in other folders)
