[workspace]
resolver = "2"
members = ["nova_cli", "nova_vm", "common", "small_string", "tests"]

[workspace.dependencies]
num-bigint = "0.4.4"
oxc_parser = { version = "0.20.0", git="https://github.com/load1n9/oxc", branch = "no_std"}
oxc_span = { version = "0.20.0", git="https://github.com/load1n9/oxc", branch = "no_std"}
oxc_syntax = { version = "0.20.0", git="https://github.com/load1n9/oxc", branch = "no_std"}
oxc_ast = { version = "0.20.0", git="https://github.com/load1n9/oxc", branch = "no_std"}
oxc_allocator = { version = "0.20.0", git="https://github.com/load1n9/oxc", branch = "no_std"}
oxc_diagnostics = { version = "0.20.0", git="https://github.com/load1n9/oxc", branch = "no_std"}
ryu-js = { version = "1.0.1", default-features = false }
wtf8 = "0.1"
